fin de mise en place de la partie CRUD des cours

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,8 @@
         {% include "partials/footer.html.twig" %}
 
 
-        
+<script src="https://kit.fontawesome.com/38ed014f42.js" crossorigin="anonymous"></script>
+
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
