--- a/templates/partials_teacher/header.html.twig
+++ b/templates/partials_teacher/header.html.twig
@@ -1,14 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<a class="navbar-brand" href="{{path('home_teacher')}}">SymApp</a>
 	{% if app.user %}
-	
-<ul class="navbar-nav mr-auto">
-<li class="nav-item mr-2">
-	<a class="nav-link  active" href="#">Cours</a>
-</li>
-</ul>
-	{% endif %}
 
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item mr-2">
+				<a class="nav-link  active" href="{{path('classes_teacher')}}">Cours</a>
+				
+			</li>
+			<li class="nav-item mr-2">
+				
+				<a class="nav-link  active" href="#">Exercice</a>
+			</li>
+		</ul>
+	{% endif %}
 
 
 	<div class="collapse navbar-collapse d-flex justify-content-end" id="navbarColor02">
@@ -16,7 +20,9 @@
 		<ul class="navbar-nav ">
 			{% if app.user %}
 				<li class="nav-item mr-2">
-					<a class="nav-link btn btn-danger active" href="{{path('teacher_logout')}}">Deconnexion</a>
+<a class="btn btn-outline-dark" type="button" href="{{path('teacher_logout')}}">Deconnexion</a>
+
+
 				</li>
 
 			{% else %}
