--- a/templates/classes_teacher/index.html.twig
+++ b/templates/classes_teacher/index.html.twig
@@ -1,7 +1,77 @@
 {% extends 'partials_teacher/base.html.twig' %}
 
-{% block title %}Cours{% endblock %}
+{% block title %}Cours
+{% endblock %}
 
 {% block body %}
-<h1>Cours<h1>
-{% endblock %}
+	<div class="container-fluid">
+		<nav aria-label="breadcrumb mt-2">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item active" aria-current="page">
+					<a href="{{path('classes_create')}}" class="btn btn-info">Ajouter</a>
+				</li>
+
+			</ol>
+		</nav>
+
+
+		<table class="table mt-2">
+			<thead>
+				<tr>
+
+					<th scope="col">Titre</th>
+					<th scope="col">Date</th>
+					<th scope="col">Mise a jour</th>
+					<th scope="col ">
+						<div class="d-flex justify-content-center">Action</div>
+					</th>
+
+
+				</tr>
+			</thead>
+			<tbody>
+				{% for repo in repos %}
+
+					<tr>
+
+						<td>{{repo.title}}</td>
+						<td>{{repo.dateCreate | date("m/d/Y") }}</td>
+						<td>
+							{% if repo.updateDate is empty %}
+								-
+							{% else %}
+								{{ repo.updateDate | date("m/d/Y") }}
+
+							{% endif %}
+						</td>
+
+
+						<td class="d-flex justify-content-end">
+
+
+							<a href="{{path('classes_show',{'slug' : repo.slug} )}}" class="nav-link btn btn-success ml-1" data-toggle="tooltip" data-placement="top" title="visualiser">
+
+
+								<i class="fas fa-eye"></i>
+								visualiser
+
+							</a>
+							<a href="{{ path('classes_edit',{'id' : repo.Id })}}" class="nav-link btn btn-success ml-1" data-toggle="tooltip" data-placement="top" title="modifier">
+								<i class="fas fa-edit"></i>
+								modifier
+							</a>
+							<a href="{{ path('classes_remove',{'id' : repo.Id })}}" class="nav-link btn btn-success ml-1" data-toggle="tooltip" data-placement="top" title="supprimer">
+
+								<i class="fas fa-trash-alt"></i>
+								supprimer
+							</a>
+							<a href="#" class="nav-link btn btn-success ml-1" data-toggle="tooltip" data-placement="top" title="exercice">
+								<i class="fas fa-file-word"></i>
+								exercice</a>
+						</td>
+					</tr>
+				</tbody>
+			{% endfor %}
+		</tbody>
+	</table>
+</div>{% endblock %}
