--- a/templates/partials_teacher/base.html.twig
+++ b/templates/partials_teacher/base.html.twig
@@ -14,7 +14,7 @@
 
 <script src="https://kit.fontawesome.com/38ed014f42.js" crossorigin="anonymous"></script>
 
-        <script src="{{asset('js/jquery.min.js')}}"></script>
+        <script src="{{asset('js/jquery.slim.min.js')}}"></script>
         <script src="{{asset('js/popper.min.js')}}"></script>
         <script src="{{asset('js/bootstrap.min.js')}}"></script>
         {% block javascripts %}{% endblock %}
