--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,9 +14,12 @@
 
 <script src="https://kit.fontawesome.com/38ed014f42.js" crossorigin="anonymous"></script>
 
-        <script src="js/jquery.min.js"></script>
+        {% block javascripts %}
+        
+        {% endblock %}
+        <script src="js/jquery.slim.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        {% block javascripts %}{% endblock %}
+        
     </body>
 </html>
