--- a/templates/partials_teacher/header.html.twig
+++ b/templates/partials_teacher/header.html.twig
@@ -9,7 +9,8 @@
 			</li>
 			<li class="nav-item mr-2">
 				
-				<a class="nav-link  active" href="#">Exercice</a>
+<a class="nav-link  active" href="{{path('exercise_index')}}">Exercice</a>
+
 			</li>
 		</ul>
 	{% endif %}
