--- a/templates/exercise_teacher/index.html.twig
+++ b/templates/exercise_teacher/index.html.twig
@@ -85,8 +85,9 @@
 
 														<td>{{exercise.title}}</td>
 														<td>{{exercise.dateCreate | date("d-m-Y")}}</td>
-														<td>{{exercise.type}}</td>
-														<td class="d-flex justify-content-end">
+														<td >{{exercise.type}}</td>
+<td class="d-flex align-self-start">
+
 
 															<a href="{{path( routeShow ,{'id' : exercise.id} )}}" class="nav-link btn btn-outline-success ml-1" data-toggle="tooltip" data-placement="top" title="visualiser">
 
@@ -106,6 +107,17 @@
 																<i class="fas fa-trash-alt"></i>
 																supprimer
 															</a>
+															{% if exercise.type == "parson" %}
+															
+<a href="{{ path('solution_show',{'id' : exercise.Id })}}" class="nav-link btn btn-outline-success ml-1" data-toggle="tooltip" data-placement="top" title="supprimer">
+
+	<i class="fas fa-trash-alt"></i>
+	solution
+</a>
+
+															
+															{% endif %}
+															
 
 														</td>
 													</tr>
