--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,20 +1,47 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-1">
 	<a class="navbar-brand" href="{{path('home')}}">SymApp</a>
-	
+{% if app.user %}
 
-<div class="collapse navbar-collapse d-flex justify-content-end" id="navbarColor02">
+	<ul class="navbar-nav mr-auto">
+		<li class="nav-item mr-2">
+<a class="nav-link  active" href="{{path('student_index')}}">Cours</a>
+
+
+		</li>
+		<li class="nav-item mr-2">
+
+<a class="nav-link  active" href="{{path('student_exercise_index')}}">Exercice</a>
+
+
+		</li>
+	</ul>
+{% endif %}
+
+
+
+	<div class="collapse navbar-collapse d-flex justify-content-end" id="navbarColor02">
 
 		<ul class="navbar-nav ">
-		
-		    <li class="nav-item mr-2">
-				<a class="nav-link btn btn-success active" href="{{path('account_login')}}">Connexion</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link btn btn-info" href="{{path('registration_student')}}">Inscription</a>
-			</li>
-			
+			{% if app.user %}
+				<li class="nav-item mr-2">
+<a class="btn btn-outline-danger" type="button" href="{{path('account_logout')}}">Deconnexion</a>
+
+
+
+				</li>
+
+			{% else %}
+
+				<li class="nav-item mr-2">
+					<a class="nav-link btn btn-success active" href="{{path('account_login')}}">Connexion</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link btn btn-info" href="{{path('registration_student')}}">Inscription</a>
+				</li>
+			{% endif %}
+
 		</ul>
-		
+
 	</div>
 </nav>
 {% for label,messages in app.flashes %}
@@ -30,4 +57,3 @@
 	</div>
 
 {% endfor %}
-
