--- a/templates/partials_teacher/header.html.twig
+++ b/templates/partials_teacher/header.html.twig
@@ -29,7 +29,8 @@
 			{% else %}
 
 				<li class="nav-item mr-2">
-					<a class="nav-link btn btn-success active" href="{{path('account_login')}}">Connexion</a>
+<a class="nav-link btn btn-success active" href="{{path('teacher_login')}}">Connexion</a>
+
 				</li>
 				<li class="nav-item">
 					<a class="nav-link btn btn-info" href="{{ path('registration_teacher') }}">Inscription</a>
