--- a/templates/student/exerciseIndex.html.twig
+++ b/templates/student/exerciseIndex.html.twig
@@ -4,6 +4,30 @@
 
 {% block body %}
 <div class="container">
+	<nav aria-label="breadcrumb mt-2 mb-2">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item active" aria-current="page">
+				<a href="#" id="back" class="btn btn-info">
+
+					<i class="fas fa-angle-left"></i>Retour</a>
+
+
+			</li>
+			<li class="breadcrumb-item active" aria-current="page">
+				<a href="{{path('exercise_stat')}}" id="back" class="btn btn-info">
+
+<i class="fas fa-file-alt mr-1"></i>les exercices que j'ai essayés</a>
+
+
+
+
+
+			</li>
+
+
+		</ol>
+	</nav>
+
 
 <table class="table">
 	<thead>
@@ -50,11 +74,12 @@
 
 {% else %}
 
-	<a href="{{path('student_exercise_parson',{'id':result.id})}}"  class="card-link btn parson1 btn-outline-success">
+	<a href="{{path('student_exercise_parson',{'id':result.id })}}"  class="card-link btn parson1 btn-outline-success">
 
 
 		<i class="fas fa-eye mr-1"></i>voir</a>
-<a href="#" class="card-link btn parson2 btn-outline-success">
+<a href="{{path('student_exercise_solvePage',{'id': result.id })}}" class="card-link btn parson2 btn-outline-success">
+
 
 
 		<i class="fas fa-pen-alt mr-1"></i>résoudre</a>
