--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="{{asset('css/bootstrap.min.css')}}">
+        <link rel="stylesheet" href="{{asset('css/app.css')}}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -20,6 +21,7 @@
         <script src="{{asset('js/popper.min.js')}}"></script>
 
         <script src="{{asset('js/bootstrap.min.js')}}"></script>
+        <script src="{{asset('js/app.js')}}"></script>
         
         {% block javascripts %}{% endblock %}
     </body>
