--- a/templates/partials_teacher/base.html.twig
+++ b/templates/partials_teacher/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="{{asset('css/bootstrap.min.css')}}">
+        <link rel="stylesheet" href="{{asset('css/app.css')}}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
