--- a/templates/partials_teacher/footer.html.twig
+++ b/templates/partials_teacher/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="mt-5 bg-dark py-5 text-center text-light">
+<footer class="footer mt-auto bg-dark py-5 text-center text-light">
 	CopyRight SymApp
 </footer>
