--- a/templates/student/classesExercise.html.twig
+++ b/templates/student/classesExercise.html.twig
@@ -50,7 +50,8 @@
 
 
 									<i class="fas fa-eye mr-1"></i>voir</a>
-								<a href="#" class="card-link btn btn-lg btn-outline-success">
+<a href="{{path('student_exercise_solvePage',{'id': exercise.id })}}" class="card-link btn btn-lg btn-outline-success">
+
 
 									<i class="fas fa-pen-alt mr-1"></i>résoudre</a>
 
