--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -31,7 +31,7 @@
 							<input type="password" class="form-control" name="_password" id="password" placeholder="mot de passe ..." required>
 						</div>
 
-						<button type="submit" class="btn btn-primary">login</button>
+						<button type="submit" class="btn btn-primary"><i class="fas fa-lock-open mr-1"></i>login</button>
 					</form>
 				</div>
 			</div>
