--- a/templates/classes_teacher/edit.html.twig
+++ b/templates/classes_teacher/edit.html.twig
@@ -5,7 +5,7 @@
 <nav aria-label="breadcrumb mt-2">
 	<ol class="breadcrumb">
 		<li class="breadcrumb-item active" aria-current="page">
-<a href="{{path('classes_teacher')}}" class="btn btn-info">
+<a href="#" id="back" class="btn btn-info">
 	<i class="fas fa-angle-left"></i>Retour</a>
 
 		</li>
