--- a/templates/exercise_teacher/detail.html.twig
+++ b/templates/exercise_teacher/detail.html.twig
@@ -1,4 +1,4 @@
-{% extends "exercise_teacher/detail.html.twig" %}
+{% extends "partials_teacher/base.html.twig" %}
 {% block title %}détail
 {% endblock %}
 {% block body %}
