--- a/templates/exercise_teacher/listSolution.html.twig
+++ b/templates/exercise_teacher/listSolution.html.twig
@@ -6,7 +6,7 @@
 		<nav aria-label="breadcrumb mt-2">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item active" aria-current="page">
-<a href="{{path('exercise_index')}}" class="btn btn-info">
+<a href="#" id="back" class="btn btn-info">
 
 	<i class="fas fa-angle-left"></i>Retour</a>
 
