--- a/templates/exercise_teacher/create.html.twig
+++ b/templates/exercise_teacher/create.html.twig
@@ -6,7 +6,7 @@
 {{form_widget(form)}}
 
 <button type="submit" class="btn btn-info">Enregistrer</button>
-<a href="#" class="btn btn-info">Annuler</a>
+<a href="#" id="back" class="btn btn-info">Annuler</a>
 {{form_end(form)}}
 
 
