--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -55,7 +55,7 @@
 	</div>
 </nav>
 {% for label,messages in app.flashes %}
-	<div class="container mt-1 mb-1">
+	<div class="container-md mt-1 mb-1">
 		<div class="alert alert-{{ label }}">
 			{% for message in messages %}
 				<p>{{ message | raw }}</p>
