--- a/templates/partials_teacher/base.html.twig
+++ b/templates/partials_teacher/base.html.twig
@@ -19,6 +19,7 @@
         <!--script src="{{asset('js/jquery.slim.min.js')}}"></script-->
         <script src="{{asset('js/popper.min.js')}}"></script>
         <script src="{{asset('js/bootstrap.min.js')}}"></script>
+        <script src="{{asset('js/app.js')}}"></script>
         {% block javascripts %}
         {% endblock %}
         
