--- a/templates/student/classesExercise.html.twig
+++ b/templates/student/classesExercise.html.twig
@@ -7,7 +7,7 @@
 		<nav aria-label="breadcrumb mt-2 mb-2">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item active" aria-current="page">
-					<a href="{{path('student_index')}}" class="btn btn-info">
+					<a href="#" id="back" class="btn btn-info">
 
 						<i class="fas fa-angle-left"></i>Retour</a>
 
