--- a/templates/student/classesShow.html.twig
+++ b/templates/student/classesShow.html.twig
@@ -7,7 +7,7 @@
 <nav aria-label="breadcrumb mt-2 mb-2">
 	<ol class="breadcrumb">
 		<li class="breadcrumb-item active" aria-current="page">
-			<a href="{{path('student_index')}}" class="btn btn-info">
+			<a href="#" id="back" class="btn btn-info">
 
 				<i class="fas fa-angle-left"></i>Retour</a>
 
@@ -24,7 +24,7 @@
 	<hr class="my-4">
 {{classes.content | raw}}
 
-	<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+	
 </div>
 
 
